fixup styling and spacing on grid

--- a/Rover-Ember/rover/app/styles/component-styles/sitter-table.css
+++ b/Rover-Ember/rover/app/styles/component-styles/sitter-table.css
@@ -12,6 +12,7 @@ tbody tr {
 }
 .min-rating-select {
     width: 15em;
+    margin-bottom: 10px;
 }
 .pagination {
     list-style: none;
@@ -28,6 +29,7 @@ tbody tr {
 .search-name-input {
     height: 26px;
     width: 210px;
+    margin-bottom: 5px;
     text-indent: 8px;
     color: #999999;
     background-color: #ffffff;
@@ -35,7 +37,6 @@ tbody tr {
     overflow-x: hidden;
     border-radius: 4px;
     border: 1px solid #aaaaaa;
-
     font-family: sans-serif;
     line-height: 1.35em;
 }
